Adds Filtering, Sorting, Pagination
