# swagger.yml
@@ -15,6 +15,35 @@ produces: application/json
 paths:
   /bootcamps:
     get:
+      parameters:
+        - in: query
+          name: select
+          example: 'name,housing'
+          schema:
+            type: string
+          required: false
+          description: Select specific fields
+        - in: query
+          name: sort
+          example: 'name'
+          schema:
+            type: string
+          required: false
+          description: Sort based on value
+        - in: query
+          name: page
+          example: 1
+          schema:
+            type: number
+          required: false
+          description: Select page number
+        - in: query
+          name: limit
+          example: 4
+          schema:
+            type: number
+          required: false
+          description: Select page limit
       summary: Get all Bootcamps
       tags:
         - Bootcamps
